test/sema/lambdas/lambda_flow_sensitive_checks.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:3: error: expected function to return a value on every path
  ->(x) { 
    if x {
      return 0; 
    }
  };
}
